--- a/index.html
+++ b/index.html
@@ -176,18 +176,23 @@ Proyecto: -->
         <figcaption>
 		<h2 ><p><strong>Justificación</strong></p></h2>
 <p>En la actualidad, las empresas se centran en una mejora constante para mantener su competitividad, considerando tanto la calidad de su servicio como los procedimientos internos que la conforman, con el objetivo de aumentar sus ganancias. Por lo tanto, el objetivo principal de este proyecto es optimizar la gestión logística en la empresa Sumideros Z&G, 
-ya que representa uno de los desafíos más significativos para la organización, dado que involucra diversas funciones clave que impactan en la eficiencia operativa y en la calidad del servicio ofrecido, lo que conlleva a una reducción de su rentabilidad.
-Además, este trabajo proporcionará a los autores la oportunidad de profundizar en los conocimientos adquiridos durante su formación profesional y servirá como una valiosa fuente de información para futuras investigaciones relacionadas con la gestión logística y la rentabilidad empresarial.
+ya que representa uno de los desafíos más significativos para la organización, dado que involucra diversas funciones clave que impactan en la eficiencia operativa y en la calidad del servicio ofrecido, lo que conlleva a una reducción de su rentabilidad.No solamente la empresa es la beneficiada con este plan de mejora completa, sino que
+también se decide articular unos beneficiarios más, estos son: Los clientes ya que siendo
+eficientes con los servicios por los cuales fue contratada la empresa los clientes podrán
+mantener cada uno de los puntos físicos sin inconvenientes, lo cual es importante para ellos
+como empresa porque más allá de contar una infraestructura adecuada, juega el papel de que
+tanto sus colaboradores como clientes se encuentren a gusto con las instalaciones y por ende
+aumento del rendimiento por parte de los colaboradores. Además, este trabajo proporcionará a los autores la oportunidad de profundizar en los conocimientos adquiridos durante su formación profesional y servirá como una valiosa fuente de información para futuras investigaciones relacionadas con la gestión logística y la rentabilidad empresarial.
 </p><br>
 		<h2 ><p><strong>Objetivo General</strong></p></h2>
 	      <p>Proponer mejoras en la gestión logística a fin de incrementar la rentabilidad de la empresa de Sumideros Z&G</p>
 		
 <h2 ><p><strong>Objetivos Especificos</strong>&nbsp;</p></h2>
-<p>Realizar un diagnóstico de la gestión logística en relación a la
+<p>-Realizar un diagnóstico de la gestión logística en relación a la
 rentabilidad en la empresa Sumideros Z&G.<br> </p>
-<p>Diseñar estrategias de mejora en la gestión logística.<br> </p>
-<p>Calcular el beneficio-costo de la propuesta de implementación<br> </p>
-<p>Evaluación de Rendimiento estableciendo KPIs (Indicadores Clave de Rendimiento) </p> <br>
+<p>-Diseñar estrategias de mejora en la gestión logística.<br> </p>
+<p>-Calcular el beneficio-costo de la propuesta de implementación<br> </p>
+<p>-Evaluación de Rendimiento estableciendo KPIs (Indicadores Clave de Rendimiento) </p> <br>
 		
         </figcaption>
       </figure>
