--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Proyecto: -->
       <figure class="image">
         <figcaption>
 		<p><strong>Quienes somos?</strong></p>
-      <p>La empresa  Sumideros Z&amp;G es una empresa peruana, esta se fundó en el año 2017 y está ubicada e el departamento&nbsp; de Lima, distrito Villa el Salvador con un area de 600 mts2, se especializa en fabricación, griferías y sumideros, colocado en el sector de&nbsp; manufactura , contando así mismo con 10 empleados que laboran dentro de la empresa. La empresa se dedica a la venta de gran cantidad de aquellos productos que ellos mismos fabrican como; registros, sumideros, tampones de lavaderos, etc, cuyos productos son hechos de bronce contando con un 100% de este metal.En su inicio fue emprendimiento de parte de la señora Zulma Romaní la cual de a pocos fue creciendo hasta convertirse en lo que es hoy.</p><br>
+      <p>La empresa  Sumideros Z&amp;G es una empresa peruana, que se fundó en el año 2017 y está ubicada e el departamento&nbsp; de Lima, distrito Villa el Salvador Ca. 5, Villa EL Salvador 15842,con un area de 600 m², esta se especializa en fabricación de  sumideros, trampa campana, tapón con Jebe, tapón rejilla y Sumideros mixtos en bronce y cromado, cuenta con   16 empleados que laboran en la empresa. Esta se fundó en el año 2017, en su inicio fue emprendimiento de parte de la señora Zulma Romaní la cual de a pocos fue creciendo hasta convertirse en lo que es hoy.</p><br>
 <img  height="200" width="200" class="" src="assets/img/EMPRESA.JPG">
 		
       <p><strong>Tipo de actividad: </strong>&nbsp;</p>
