--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Proyecto: -->
         <figcaption>
 		<p><strong>Quienes somos?</strong></p>
       <p>La empresa  Sumideros Z&amp;G es una empresa peruana, que se fundó en el año 2017 y está ubicada e el departamento&nbsp; de Lima, distrito Villa el Salvador Ca. 5, Villa EL Salvador 15842,con un area de 600 m², esta se especializa en fabricación de  sumideros, trampa campana, tapón con Jebe, tapón rejilla y Sumideros mixtos en bronce y cromado, cuenta con   16 empleados que laboran en la empresa. Esta se fundó en el año 2017, en su inicio fue emprendimiento de parte de la señora Zulma Romaní la cual de a pocos fue creciendo hasta convertirse en lo que es hoy.</p><br>
-<img  height="200" width="200" class="" src="assets/img/EMPRESA.JPG">
+<img  height="200" width="200" class="" src="assets/img/EMPRESA.JPG"> <img  height="200" width="200" class="" src="assets/img/EMPRESA2.JPG"> <img  height="200" width="200" class="" src="assets/img/EMPRESA3.JPG">
 		
       <p><strong>Tipo de actividad: </strong>&nbsp;</p>
  <p>  Según la clasificación nacional de actividades económicas, Sumideros Z&G se encuentra en sector de manufactura de productos  derivados del metal. </p>
