--- a/index.html
+++ b/index.html
@@ -176,16 +176,14 @@ Proyecto: -->
         <figcaption>
 		<h2 ><p><strong>Justificación</strong></p></h2>
 <p>En la actualidad, las empresas se centran en una mejora constante para mantener su competitividad, considerando tanto la calidad de su servicio como los procedimientos internos que la conforman, con el objetivo de aumentar sus ganancias. Por lo tanto, el objetivo principal de este proyecto es optimizar la gestión logística en la empresa Sumideros Z&G, 
-ya que representa uno de los desafíos más significativos para la organización, dado que involucra diversas funciones clave que impactan en la eficiencia operativa y en la calidad del servicio ofrecido, lo que conlleva a una reducción de su rentabilidad.No solamente la empresa es la beneficiada con este plan de mejora completa, sino que
-también se decide articular unos beneficiarios más, estos son: Los clientes ya que siendo
-eficientes con los servicios por los cuales fue contratada la empresa los clientes podrán
-mantener cada uno de los puntos físicos sin inconvenientes, lo cual es importante para ellos
-como empresa porque más allá de contar una infraestructura adecuada, juega el papel de que
-tanto sus colaboradores como clientes se encuentren a gusto con las instalaciones y por ende
-aumento del rendimiento por parte de los colaboradores. Además, este trabajo proporcionará a los autores la oportunidad de profundizar en los conocimientos adquiridos durante su formación profesional y servirá como una valiosa fuente de información para futuras investigaciones relacionadas con la gestión logística y la rentabilidad empresarial.
+ya que representa uno de los desafíos más significativos para la organización, dado que involucra diversas funciones clave que impactan en la eficiencia operativa y en la calidad del servicio ofrecido, lo que conlleva a una reducción de su rentabilidad.No solamente la empresa es la beneficiada con este plan de mejora, sino que
+también los clientes ya que siendo eficientes con los servicios por los cuales fue contratada la empresa,los clientes se benefiaran con
+la entrega puntual y la precisión en la entrega los cuales son factores clave para la satisfacción del mismo. Al mejorar nuestro sistema logístico, 
+podemos garantizar entregas más rápidas y precisas, lo que a su vez aumentará la satisfacción del cliente y fortalecerá la fidelidad a nuestra marca.
+aumento del rendimiento por parte de los colaboradores. Además, este trabajo nos proporcionara la oportunidad de profundizar en los conocimientos adquiridos durante nuestra formación profesional y servirá como una valiosa fuente de información para futuras investigaciones relacionadas con la gestión logística y la rentabilidad empresarial.
 </p><br>
-		<h2 ><p><strong>Objetivo General</strong></p></h2>
-	      <p>Proponer mejoras en la gestión logística a fin de incrementar la rentabilidad de la empresa de Sumideros Z&G</p>
+<h2 ><p><strong>Objetivo General</strong></p></h2>
+<p>Proponer mejoras en la gestión logística a fin de incrementar la rentabilidad de la empresa de Sumideros Z&G</p>
 		
 <h2 ><p><strong>Objetivos Especificos</strong>&nbsp;</p></h2>
 <p>-Realizar un diagnóstico de la gestión logística en relación a la
@@ -228,19 +226,24 @@ rentabilidad en la empresa Sumideros Z&G.<br> </p>
 	</div></p>
 	  
 	 <h2 id="a8">RESUMEN DEL AVANCE DEL DIAGNOSTICO</h2>
-      <p> Para nuestro caso, nos apersonamos directamente ,esto habiendo recibido la carta de presentación dada por la universidad ,esta se nos entrego en la fecha 14/09/2023 .Para esta ocasión el compañero Ccahuana Aranibar,Miguel Ángel fue la persona quien se apersono a la empresa logrando contactar con el encargado del área de marketing Edil Campos .<br>
+      <p> Para nuestro caso, nos apersonamos directamente ,esto habiendo recibido la carta de presentación dada por la universidad ,esta se nos entrego en la <b>fecha 14/09/2023</b>b> .<br>
 <b>Fecha de la visita:</b> 14/09/2023 <br>
+logrando contactar con el encargado del área de marketing Edil Campos .
 <b>Resultado de contacto:</b> <br>
-Se logro obtener cierta información referente a la empresa,misión,visión,valores, áreas funcionales, organigrama y proceso logístico.<br>
+Se logro obtener cierta  información esto debido algunos temas de tiempo por parte del encargado y cierta desconfianza.<br>
+<b>Información obtenida:</b> <br>
+-Breve información de la empresa<br>
+-Áreas de la empresa y Organigrama<br>
+-Proceso de producción y algunas fotos de las áreas.<br>
+     
 <b>Observaciones: </b><br>
 -No se tenia mucha noción sobre las labores de los trabajadores en cada área ni los nombres de cada uno.<br>
--No se tenia mucha noción sobre las labores de los trabajadores en cada área ni los nombres de cada uno.<br>
--No existía un organigrama porque según se están organizando aun, pero se indico un aproximado.<br>
+-No existía un organigrama establecido porque según se están organizando aun, pero indicamos uno aproximado.<br>
+-No tenían visión, misión y valores los creamos a partir de lo comentado por parte del encargado el cual tenia una idea.<br>
 -Los trabajadores son algo reacios a contestar por el momento.<br>
--El proceso logistico no fue exacto,se requiere otras visitas<br>
+-El proceso logístico no fue detallado y fue algo impreciso, pero dimos sugerencias para su mejora<br>
 </div></p>
 	
-
   <!-- Scripts -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
   <script type="text/javascript" src="assets/js/index.js"></script>
