--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ Se logro obtener cierta  información esto debido algunos temas de tiempo por pa
 -Los trabajadores son algo reacios a contestar por el momento.<br>
 -El proceso logístico no fue detallado y fue algo impreciso, pero dimos sugerencias para su mejora<br>
 </div></p>
-	
+	<img  height="200" width="200" class="" src="assets/img/AREAS-PRODU.JPG">
   <!-- Scripts -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
   <script type="text/javascript" src="assets/js/index.js"></script>
