--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@ Proyecto: -->
 						<li><a href="#a4">Objetivos</a></li>
 						<li><a href="#a5">Organigrama</a></li>
 						<li><a href="#a6">Cronograma</a></li>
-						<li><a href="#a7">Productos</a></li>
-						<li><a href="#a8">Avance del diagnóstico</a></li>
+						<li><a href="#a7">Diagrama de flujo Producción</a></li>
+						<li><a href="#a8">Diagrama de flujo Compra</a></li>
+						<li><a href="#a9">Productos</a></li>
+						<li><a href="#a10">Avance del diagnóstico</a></li>
 					</ul>
 				</li>
 
@@ -214,18 +216,29 @@ rentabilidad en la empresa Sumideros Z&G.<br> </p>
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFvM2W_Eso&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div></p>
- 
-     <h2 id="a7">PRODUCTOS</h2>
-      <p><div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+
+
+  <h2 id="a7">Diagrama de Flujo Compras</h2>
+      <p><div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
   <iframe loading="lazy" style="position: absolute; width: 100%; height: 90%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFvJ4sVzWo&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFvM2W_Eso&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
-</div>
+</div></p>
+
+<h2 id="a8">Diagrama de Flujo Producción</h2>
+      <p><div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 90%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFvM2W_Eso&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div></p>
+	 
 	</div></p>
 	  
-	 <h2 id="a8">RESUMEN DEL AVANCE DEL DIAGNOSTICO</h2>
+	 <h2 id="a9">RESUMEN DEL AVANCE DEL DIAGNOSTICO</h2>
       <p> Para nuestro caso, nos apersonamos directamente ,esto habiendo recibido la carta de presentación dada por la universidad ,esta se nos entrego en la <b>fecha 14/09/2023</b>b> .<br>
 <b>Fecha de la visita:</b> 14/09/2023 <br>
 logrando contactar con el encargado del área de marketing Edil Campos .
@@ -244,7 +257,18 @@ Se logro obtener cierta  información esto debido algunos temas de tiempo por pa
 -El proceso logístico no fue detallado y fue algo impreciso, pero dimos sugerencias para su mejora<br>
 	      <img  height="200" width="200" class="" src="assets/img/AREAS-PRODU.JPG">
 </div></p>
-	
+
+
+   <h2 id="a10">PRODUCTOS</h2>
+      <p><div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 90%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFvJ4sVzWo&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div></p>
+
+	 
   <!-- Scripts -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
   <script type="text/javascript" src="assets/js/index.js"></script>
