--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@ rentabilidad en la empresa Sumideros Z&G.<br> </p>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 80%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFvM2W_Eso&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 90%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFv3CL2JAk&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div></p>
 	 
@@ -231,7 +231,7 @@ rentabilidad en la empresa Sumideros Z&G.<br> </p>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 80%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 90%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFv3BK_vFg&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div></p>
@@ -255,7 +255,7 @@ Se logro obtener cierta  información esto debido algunos temas de tiempo por pa
 -No tenían visión, misión y valores los creamos a partir de lo comentado por parte del encargado el cual tenia una idea.<br>
 -Los trabajadores son algo reacios a contestar por el momento.<br>
 -El proceso logístico no fue detallado y fue algo impreciso, pero dimos sugerencias para su mejora<br>
-	      <img  height="300" width="600" class="" src="assets/img/AREAS-PRODU.JPG">
+	      <img  height="550" width="750" class="" src="assets/img/AREAS-PRODU.JPG">
 </div></p>
 
 
