--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Proyecto: -->
 						<li><a href="#a4">Objetivos</a></li>
 						<li><a href="#a5">Organigrama</a></li>
 						<li><a href="#a6">Cronograma</a></li>
-						<li><a href="#a7">Diagrama Compra</a></li>
+						<li><a href="#a7">Diagrama Compras</a></li>
 						<li><a href="#a8">Diagrama Producción</a></li>
 						<li><a href="#a9">Avance del diagnóstico</a></li>
 						<li><a href="#a10">Productos</a></li>
