--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ rentabilidad en la empresa Sumideros Z&G.<br> </p>
 	</div></p>
 	  
 	 <h2 id="a9">RESUMEN DEL AVANCE DEL DIAGNOSTICO</h2>
-      <p> Para nuestro caso, nos apersonamos directamente ,esto habiendo recibido la carta de presentación dada por la universidad ,esta se nos entrego en la <b>fecha 14/09/2023</b>b> .<br>
+      <p> Para nuestro caso, nos apersonamos directamente ,esto habiendo recibido la carta de presentación dada por la universidad ,esta se nos entrego en la <b>fecha 14/09/2023</b> .<br>
 <b>Fecha de la visita:</b> 14/09/2023 <br>
 logrando contactar con el encargado del área de marketing Edil Campos .
 <b>Resultado de contacto:</b> <br>
