--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@ Proyecto: -->
 						<li><a href="#a4">Objetivos</a></li>
 						<li><a href="#a5">Organigrama</a></li>
 						<li><a href="#a6">Cronograma</a></li>
-						<li><a href="#a7">Diagrama Compras</a></li>
-						<li><a href="#a8">Diagrama Producción</a></li>
-						<li><a href="#a9">Avance del diagnóstico</a></li>
-						<li><a href="#a10">Productos</a></li>
+						<li><a href="#a7">Diagrama Producción</a></li>
+						<li><a href="#a8">Avance del diagnóstico</a></li>
+						<li><a href="#a9">Productos</a></li>
 					</ul>
 				</li>
 
@@ -217,22 +216,12 @@ rentabilidad en la empresa Sumideros Z&G.<br> </p>
   </iframe>
 </div></p>
 
-
-  <h2 id="a7">DIAGRAMA COMPRAS</h2>
-      <p><div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
+<h2 id="a7">DIAGRAMA</h2>
+      <p><div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
   <iframe loading="lazy" style="position: absolute; width: 100%; height: 90%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFv3CL2JAk&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
-</div></p>
-	 
-<h2 id="a8">DIAGRAMA PRODUCCIÓN</h2>
-      <p><div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
- padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
- border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 90%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFv3BK_vFg&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxH8Ss9ec&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div></p>
 	 
