--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ Proyecto: -->
 						<li><a href="#a7">Diagramas</a></li>
 						<li><a href="#a8">Avance del diagnóstico</a></li>
 						<li><a href="#a9">Productos</a></li>
+						<li><a href="#a10">Proceso Operativo</a></li>
+						<li><a href="#a11">Cadena de abastecimiento</a></li>
 					</ul>
 				</li>
 
@@ -256,6 +258,27 @@ Se logro obtener cierta  información esto debido algunos temas de tiempo por pa
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFvJ4sVzWo&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div></p>
+
+<h2 id="a9">PROCESO PDRODUCTIVO</h2>
+      <p> El proceso de producción comienza con la recepción de pedidos en la empresa, lo cual puede
+ocurrir a través de comunicaciones telefónicas, WhatsApp o correos electrónicos, dirigidos tanto
+al equipo de ventas como a la encargada, que está bajo la supervisión de la Administración. Como
+se detallará en el diagrama de flujo posterior, estas áreas consultan con el departamento de almacén
+para verificar la disponibilidad de stock. En caso de no haber existencias, el almacén se encarga
+de coordinar la fabricación de los productos y preparar el envío. No se observa una relación
+funcional establecida entre estas dos partes, ya que la encargada en algunos casos puede manejar
+el pedido o derivarlo a un vendedor, lo que da lugar a la falta de un procedimiento definido.
+Ahora se hará mostrara el proceso productivo para la fabricación de los sumideros estos se
+realizan en 4 operaciones principales:
+     
+<b>Observaciones: </b><br>
+
+	     <video width="640" height="360" controls>
+  <source src="assets/videos/procesos/TikTok_sumideros_ZG2b7.mp4" type="video/mp4">
+  <source src="ruta_del_video.webm" type="video/webm">
+  <!-- Texto alternativo --></div>
+</video>
+
 
 	 
   <!-- Scripts -->
