--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ rentabilidad en la empresa Sumideros Z&G.<br> </p>
 	 
 	</div></p>
 	  
-	 <h2 id="a9">RESUMEN DEL AVANCE DEL DIAGNOSTICO</h2>
+	 <h2 id="a8">RESUMEN DEL AVANCE DEL DIAGNOSTICO</h2>
       <p> Para nuestro caso, nos apersonamos directamente ,esto habiendo recibido la carta de presentación dada por la universidad ,esta se nos entrego en la <b>fecha 14/09/2023</b> .<br>
 <b>Fecha de la visita:</b> 16/09/2023 <br>
 logrando contactar con el encargado del área de marketing Edil Campos .
@@ -250,7 +250,7 @@ Se logro obtener cierta  información esto debido algunos temas de tiempo por pa
 </div></p>
 
 
-   <h2 id="a10">PRODUCTOS</h2>
+   <h2 id="a9">PRODUCTOS</h2>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
@@ -259,7 +259,7 @@ Se logro obtener cierta  información esto debido algunos temas de tiempo por pa
   </iframe>
 </div></p>
 
-<h2 id="a9">PROCESO PDRODUCTIVO</h2>
+<h2 id="a10">PROCESO OPERATIVO</h2>
       <p> El proceso de producción comienza con la recepción de pedidos en la empresa, lo cual puede
 ocurrir a través de comunicaciones telefónicas, WhatsApp o correos electrónicos, dirigidos tanto
 al equipo de ventas como a la encargada, que está bajo la supervisión de la Administración. Como
