--- a/index.html
+++ b/index.html
@@ -269,10 +269,15 @@ de coordinar la fabricación de los productos y preparar el envío. No se observ
 funcional establecida entre estas dos partes, ya que la encargada en algunos casos puede manejar
 el pedido o derivarlo a un vendedor, lo que da lugar a la falta de un procedimiento definido.
 Ahora se hará mostrara el proceso productivo para la fabricación de los sumideros estos se
-realizan en 4 operaciones principales:
+realizan en 4 operaciones principales:<br>
      
-<b>Observaciones: </b><br>
-
+<p></p><b>Fundición : </b><br></p>
+Este proceso se lleva a cabo en un área muy alejada al local de venta. Debido a la cantidad de
+material y lo contaminante que es el mismo. Según lo comentado aquí también se hace uso de
+algunos reactivos que se aplican al bronce este para evitar mayor generación de gases los pasos para la fundición. 
+<b> Selección del metal</b><br>
+	<img  height="400" width="700" class="" src="assets/img/1.JPG"> 
+	      
 	     <video width="640" height="360" controls>
   <source src="assets/videos/procesos/TikTok_sumideros_ZG2b7.mp4" type="video/mp4">
   <!-- Texto alternativo --></div>
