--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@ Este proceso se lleva a cabo en un área muy alejada al local de venta. Debido a
 material y lo contaminante que es el mismo. Según lo comentado aquí también se hace uso de
 algunos reactivos que se aplican al bronce este para evitar mayor generación de gases los pasos para la fundición. 
 <b> Selección del metal:</b><br>
-	<div><img  height="400" width="700" class="" src="assets/img/1.JPG">    <video width="640" height="360" controls>
+	<img  height="400" width="700" class="" src="assets/img/1.JPG">    <video width="640" height="360" controls>
   <source src="assets/videos/procesos/TikTok_sumideros_ZG2b7.mp4" type="video/mp4">
-  <!-- Texto alternativo --></div>
+  <!-- Texto alternativo -->
 </video>
 	      
 	  
