--- a/index.html
+++ b/index.html
@@ -259,30 +259,23 @@ Se logro obtener cierta  información esto debido algunos temas de tiempo por pa
   </iframe>
 </div></p>
 
-<h2 id="a10">PROCESO OPERATIVO</h2>
-      <p> El proceso de producción comienza con la recepción de pedidos en la empresa, lo cual puede
-ocurrir a través de comunicaciones telefónicas, WhatsApp o correos electrónicos, dirigidos tanto
-al equipo de ventas como a la encargada, que está bajo la supervisión de la Administración. Como
-se detallará en el diagrama de flujo posterior, estas áreas consultan con el departamento de almacén
-para verificar la disponibilidad de stock. En caso de no haber existencias, el almacén se encarga
-de coordinar la fabricación de los productos y preparar el envío. No se observa una relación
-funcional establecida entre estas dos partes, ya que la encargada en algunos casos puede manejar
-el pedido o derivarlo a un vendedor, lo que da lugar a la falta de un procedimiento definido.
-Ahora se hará mostrara el proceso productivo para la fabricación de los sumideros estos se
-realizan en 4 operaciones principales:<br>
-     
-<p></p><b>Fundición : </b><br></p>
-Este proceso se lleva a cabo en un área muy alejada al local de venta. Debido a la cantidad de
-material y lo contaminante que es el mismo. Según lo comentado aquí también se hace uso de
-algunos reactivos que se aplican al bronce este para evitar mayor generación de gases los pasos para la fundición. 
-<b> Selección del metal:</b><br>
-	<img  height="400" width="700" class="" src="assets/img/1.JPG">    <video width="640" height="360" controls>
-  <source src="assets/videos/procesos/TikTok_sumideros_ZG2b7.mp4" type="video/mp4">
-  <!-- Texto alternativo -->
-</video>
-	      
-	  
+ <h2 id="a10">PROCESOS OPERATIVOS</h2>
+     <p> <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 90%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxKImWlIs&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div></p>
 
+<h2 id="a10">CADENA DE ABASTECIMIENTO</h2>
+      <p><div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 90%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxKerUafs&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div></p>
 
 	 
   <!-- Scripts -->
