--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@ Proyecto: -->
 						<li class="title-menu"><span class="fa fa-calendar icon-menu"></span>PLANIFICACIÓN</li>
 						<li class="go-back">Atras</li>
 
-						<li><a href="#">EEEEEEEE</a></li>
-						<li><a href="#">FFFFFFFF</a></li>
-						<li><a href="#">GGGGGGGGG</a></li>
+						<li><a href="#b1">Justificación</a></li>
+						<li><a href="#b2">Cronograma de Objetivos y metas</a></li>
+						<li><a href="#b3">Presupuesto de Actividades</a></li>
+						<li><a href="#b4">Plan de acción</a></li>
+
 					</ul>
 				</li>
 
