--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@ Proyecto: -->
 						<li class="title-menu"><span class="fa fa-gears icon-menu"></span>EJECUCIÓN</li>
 						<li class="go-back">Atras</li>
 
-						<li><a href="#">444444444444</a></li>
-						<li><a href="#">TTTTTTTTTT</a></li>
-						<li><a href="#">CTTTTTTTTT</a></li>
+					        <li><a href="#c1">Activides Realizadas</a></li>
+						<li><a href="#c2">Evidencias</a></li>
 					</ul>
 				</li>
 				
@@ -97,9 +96,13 @@ Proyecto: -->
 						<li class="title-menu"><span class="fa fa-question-circle icon-menu"></span>EVALUACIÓN</li>
 						<li class="go-back">Atras</li>
 
-						<li><a href="#">WWWWWW</a></li>
-						<li><a href="#">WWWWW</a></li>
-						<li><a href="#">CWWWWWWWWW</a></li>
+					        <li><a href="#d1">Matriz de autoevaluación</a></li>
+						<li><a href="#d2">Matriz de informe de resultados</a></li>
+						<li><a href="#d2">Informe del impacto de resultados</a></li>
+						<li><a href="#d2">Conclusiones</a></li>
+						<li><a href="#d2">Recomendaciones</a></li>
+						<li><a href="#d2">Referencias</a></li>
+						<li><a href="#d2">Anexos</a></li>
 					</ul>
 				</li>
 				
