--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@ Proyecto: -->
 
 					        <li><a href="#d1">Matriz de autoevaluación</a></li>
 						<li><a href="#d2">Matriz de informe de resultados</a></li>
-						<li><a href="#d2">Informe del impacto de resultados</a></li>
-						<li><a href="#d2">Conclusiones</a></li>
-						<li><a href="#d2">Recomendaciones</a></li>
-						<li><a href="#d2">Referencias</a></li>
-						<li><a href="#d2">Anexos</a></li>
+						<li><a href="#d3">Informe del impacto de resultados</a></li>
+						<li><a href="#d4">Conclusiones</a></li>
+						<li><a href="#d5">Recomendaciones</a></li>
+						<li><a href="#d6">Referencias</a></li>
+						<li><a href="#d7">Anexos</a></li>
 					</ul>
 				</li>
 				
@@ -281,6 +281,23 @@ Se logro obtener cierta  información esto debido algunos temas de tiempo por pa
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFxKerUafs&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div></p>
+
+
+ <h2 id="b1">PLANIFICACIÓN</h2>
+      <figure class="image">
+        <figcaption>
+		<h2 ><p><strong>Justificación</strong></p></h2>
+<p>ELa elección del tema " Mejora del sistema logístico de la empresa la empresa Sumideros Z&G, ubicada en el distrito de Villa El Salvador", en beneficio del ODS 9,11 Y 12, se justifica a través de diversos factores clave: Compromiso con la Sostenibilidad (ODS 9): El ODS 9, "Industria, innovación e infraestructura", busca transformar positivamente las cadenas de suministro y consumo hacia prácticas más sostenibles. La reorganización de Sumideros Z&G se traducirá en la reducción de residuos sólidos, contribuyendo directamente al ODS 9 al disminuir la generación de desechos y mejorar la infraestructura mediante una distribución de áreas adecuada para un control más efectivo de insumos y, por ende, de residuos sólidos. Con respecto al ODS 11, nos enfocaremos en el diseño de infraestructuras logísticas sostenibles y resilientes. Esto implica la creación de espacios y procesos que minimicen el impacto ambiental, reduzcan las emisiones de carbono y mejoren la movilidad, contribuyendo así a la creación de ciudades y comunidades más sostenibles y habitables. Adicionalmente, en consonancia con el ODS 12, nos comprometemos a optimizar nuestro sistema logístico mediante la promoción de prácticas de producción y consumo responsables. Investigaremos y aplicaremos estrategias para reducir desperdicios, minimizar la huella ecológica y fomentar la adopción de prácticas empresariales sostenibles.
+Impacto Ambiental Positivo: La gestión inadecuada de residuos sólidos puede tener consecuencias negativas en el medio ambiente, como la contaminación del suelo y del agua. La implementación de un sistema eficiente en la línea de producción de Sumideros Z&G ayudará a mitigar estos impactos y fomentará prácticas empresariales responsables.
+Cumplimiento Normativo y Reputación Empresarial: Desarrollar un sistema eficiente en la producción asegurará que Sumideros Z&G cumpla con las normativas locales y nacionales, evitando sanciones y mejorando su reputación en términos de responsabilidad empresarial e inocuidad. Esto también generará responsabilidad en la comunidad de Villa El Salvador.
+Reducción de Costos Asociados a Residuos: La reducción de residuos implica un menor gasto en materiales reutilizables, como las virutas de bronce, cajas y bolsas de plástico, lo que se traduce en menores costos asociados con la gestión y eliminación de desechos. Esto no solo beneficia a la empresa en términos financieros, sino que también contribuye a la responsabilidad social en la comunidad.
+</p><br>
+
+		
+        </figcaption>
+      </figure>
+
+
 
 	 
   <!-- Scripts -->
