--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ Se logro obtener cierta  información esto debido algunos temas de tiempo por pa
 </div></p>
 
 
- <h2 id="b1"><strong>JUSTIFICACIÓN</strong>strong></h2>
+ <h2 id="b1"><strong>JUSTIFICACIÓN</strong></h2>
       <figure class="image">
         <figcaption>
 		
@@ -296,7 +296,7 @@ Reducción de Costos Asociados a Residuos: La reducción de residuos implica un 
         </figcaption>
       </figure>
 
-<h2 id="b2">CRONOGRAMA DE OBJETIVOS Y ACTIVIDADES</h2>
+<h2 id="b2"><strong>RONOGRAMA DE OBJETIVOS Y ACTIVIDADES</strong></h2>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 129.4118%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
