--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Mejora de distribucion:El ubicar en su justo sitio maquinas, herramientas y acce
         </figcaption>
       </figure>
 
-<h2 id="b2"><strong>RONOGRAMA DE OBJETIVOS Y ACTIVIDADES</strong></h2>
+<h2 id="b2"><strong>CRONOGRAMA DE OBJETIVOS Y ACTIVIDADES</strong></h2>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 129.4118%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
