--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@ Proyecto: -->
 
 						<li><a href="#b1">Justificación</a></li>
 						<li><a href="#b2">Cronograma de Objetivos y metas</a></li>
-						<li><a href="#b3">Presupuesto de Actividades</a></li>
-						<li><a href="#b4">Plan de acción</a></li>
+						<li><a href="#b3">Diagrama de Gantt</a></li>
+						<li><a href="#b4">Presupuesto de Actividades</a></li>
+						<li><a href="#b5">Plan de acción</a></li>
 
 					</ul>
 				</li>
@@ -306,6 +307,15 @@ Mejora de distribucion:El ubicar en su justo sitio maquinas, herramientas y acce
   </iframe>
 </div></p>
 
+   <h2 id="b3">DIAGRAMA GANTT</h2>
+      <p><div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF1wA52RD8&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div></p>
+	 
 	 
   <!-- Scripts -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
