--- a/index.html
+++ b/index.html
@@ -319,8 +319,17 @@ Mejora de distribucion:El ubicar en su justo sitio maquinas, herramientas y acce
   </iframe>
 </div></p>
 
+  <h2 id="b4">PRESUPUESTO DE LAS ACTIVIDADES REALIZADAS</h2>
+      <p><div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF1wA52RD8&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div></p>
 
-<h2 id="b4"><strong>INFORME DE LAS ACTIVIDADES DEL PLAN</strong></h2>
+	 
+<h2 id="b5"><strong>INFORME DE LAS ACTIVIDADES DEL PLAN</strong></h2>
       <figure class="image">
         <figcaption>
 	Las acciones planificadas por Sumideros Z&G deben reflejar de manera tangible el fortalecimiento de la competitividad de la empresa y el impulso hacia una producción y consumo más responsables, alineándose con el desarrollo sostenible (ODS 9) y contribuyendo al bienestar general de la sociedad. Además, se busca establecer una conexión significativa con los Objetivos de Desarrollo Sostenible (ODS) 11 y 12, que se centran en ciudades y comunidades sostenibles y en consumo y producción responsables, respectivamente.
