--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
 
 
 
-   <h2 id="c1"><strong>ACTIVIDADES REALIZADAS POR OBJETIVOS></strong></h2>
+   <h2 id="c1"><strong>ACTIVIDADES REALIZADAS POR OBJETIVOS</strong></h2>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
@@ -351,7 +351,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
   </iframe>
 </div></p>
 
-   <h2 id="c2"><strong>EVIDENCIAS DE LAS ACTIVIDADES REALIZADAS></strong></h2>
+   <h2 id="c2"><strong>EVIDENCIAS DE LAS ACTIVIDADES REALIZADAS</strong></h2>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 100.0000%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
@@ -378,7 +378,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
   </iframe>
 </div></p>
 
-<h2 id="d2"><strong>CONCLUSIONES</strong></h2>
+<h2 id="d3"><strong>CONCLUSIONES</strong></h2>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
@@ -387,7 +387,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
   </iframe>
 </div></p>
 
-	 <h2 id="d2"><strong>RECOMENDACIONES</strong></h2>
+	 <h2 id="d4"><strong>RECOMENDACIONES</strong></h2>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
