--- a/index.html
+++ b/index.html
@@ -329,12 +329,14 @@ Mejora de distribucion:El ubicar en su justo sitio maquinas, herramientas y acce
 <h2 id="b5"><strong>INFORME DE LAS ACTIVIDADES DEL PLAN</strong></h2>
       <figure class="image">
         <figcaption>
-	Las acciones planificadas por Sumideros Z&G deben reflejar de manera tangible el fortalecimiento de la competitividad de la empresa y el impulso hacia una producción y consumo más responsables, alineándose con el desarrollo sostenible (ODS 9) y contribuyendo al bienestar general de la sociedad. Además, se busca establecer una conexión significativa con los Objetivos de Desarrollo Sostenible (ODS) 11 y 12, que se centran en ciudades y comunidades sostenibles y en consumo y producción responsables, respectivamente.
+	<BR>Las acciones planificadas por Sumideros Z&G deben reflejar de manera tangible el fortalecimiento de la competitividad de la empresa y el impulso hacia una producción y consumo más responsables, alineándose con el desarrollo sostenible (ODS 9) y contribuyendo al bienestar general de la sociedad. Además, se busca establecer una conexión significativa con los Objetivos de Desarrollo Sostenible (ODS) 11 y 12, que se centran en ciudades y comunidades sostenibles y en consumo y producción responsables, respectivamente.
 El proyecto denominado "Mejora del sistema logístico para Sumideros Z&G ubicado en Ca. 5, Villa El Salvador 15842, Lima" busca específicamente desarrollar e implementar sistemas eficientes en la cadena de suministro de la empresa. En sintonía con el ODS 9, se planea avanzar en la optimización de la cadena de suministro mediante la identificación detallada del plan de valorización de residuos y la nueva distribución de la empresa.
 En relación con el ODS 11 (Ciudades y Comunidades Sostenibles), la nueva distribución de Sumideros Z&G contribuirá a la creación de un entorno urbano más eficiente y sostenible en el distrito de Villa El Salvador. La optimización de la cadena de suministro también puede tener impactos positivos en la gestión de recursos a nivel local, promoviendo prácticas más sostenibles y una planificación urbana más inteligente.
 Respecto al ODS 12 (Consumo y Producción Responsables), el proyecto enfocado en la mejora del sistema logístico se alinea directamente con la reducción de residuos y la promoción de prácticas comerciales responsables. El plan de valorización de residuos y la atención a la eficiencia operativa no solo contribuyen al ODS 9, sino que también abordan directamente los principios de consumo y producción sostenibles del ODS 12.
 Este enfoque integral no solo busca reducir residuos y fomentar prácticas comerciales responsables, sino que también apunta a mejorar la calidad de los sumideros y la eficiencia operativa en su conjunto. Se espera que este proyecto genere una disminución de costos operativos, impulse la reputación de la empresa en términos de responsabilidad empresarial y contribuya al desarrollo sostenible en las dimensiones de los ODS 9, 11 y 12.
-<p><br><br><br>
+<p><br><br>
+	</BR>
+		</BR>
 </p><br>
         </figcaption>
       </figure>
