--- a/index.html
+++ b/index.html
@@ -299,13 +299,14 @@ Mejora de distribucion:El ubicar en su justo sitio maquinas, herramientas y acce
       </figure>
 
 <h2 id="b2"><strong>CRONOGRAMA DE OBJETIVOS Y ACTIVIDADES</strong></h2>
-      <p><div style="position: relative; width: 100%; height: 0; padding-top: 129.4118%;
+      <p><div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 90%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF1v9PxGTA&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF2aWMsdA8&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
-</div></p>
+</div>
+</p>
 
    <h2 id="b3">DIAGRAMA GANTT</h2>
       <p><div style="position: relative; width: 100%; height: 0; padding-top: 52.3810%;
