--- a/index.html
+++ b/index.html
@@ -349,13 +349,14 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
 
 
    <h2 id="c1"><strong>ACTIVIDADES REALIZADAS POR OBJETIVOS</strong></h2>
-      <p><div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
+      <p><div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
-  <iframe loading="lazy" style="position: absolute; width: 100%; height: 90%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
-    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF1wFcJ4wU&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF2aseLqoE&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
-</div></p>
+</div>
+</p>
 
    <h2 id="c2"><strong>EVIDENCIAS DE LAS ACTIVIDADES REALIZADAS</strong></h2>
       <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
