--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
 	 
 
 <section id="downloads">
-      <h2 id="#" class="title">Descargas</h2>
+      <h2 id="downloads" class="title">Descargas</h2>
         <tr>
           <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Carta Presentación</td>
           <td>
