--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Proyecto: -->
 				</li>
 				
 				
-				<li><a href="downloads"><span class="fa fa-download icon-menu"></span>DESCARGAS</a></li>
+				<li><a href="#downloads"><span class="fa fa-download icon-menu"></span>DESCARGAS</a></li>
 
 
 
