--- a/index.html
+++ b/index.html
@@ -448,8 +448,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
         </tr>
       </table>
       <hr />
-
-
+   </section>
 	 
   <!-- Scripts -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
