--- a/index.html
+++ b/index.html
@@ -410,7 +410,9 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
 	 
 
 <section id="downloads">
-      <h2 id="downloads" class="title">Descargas</h2>
+     <h2 id=""><strong>DESCARGAS</strong></h2>
+      <p>En esta sección se encuentran los documentos producidos durante el proyecto.</p>
+      <table class="table__downloads">
         <tr>
           <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Carta Presentación</td>
           <td>
@@ -448,7 +450,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
         </tr>
       </table>
       <hr />
-   </section>
+    </section>
 	 
   <!-- Scripts -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
