--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
 <section id="downloads">
      <h2 id=""><strong>DESCARGAS</strong></h2>
       <p>En esta sección se encuentran los documentos producidos durante el proyecto.</p>
-      <table class="">
+      <table class="table__downloads">
         <tr>
           <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Carta Presentación</td>
           <td>
@@ -444,8 +444,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
         </tr>
         <tr>
          
-            <a href="assets/files/DaCapoPresentationArticle" download="Ejemplo_Presentación_Artículo_Matrícula"
-              class="button" target="_blank">Descargar<i class='bx bxs-download icon__downloads'></i></a>
+            
           </td>
         </tr>
       </table>
