--- a/index.html
+++ b/index.html
@@ -416,14 +416,14 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
         <tr>
           <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Carta Presentación</td>
           <td>
-            <a href="assets/files/#" download="Ejemplo_Cartel_PT1_Matrícula" class="button" target="_blank">Descargar<i
+            <a href="assets/files/#" download="Carta Nº 025-2023-RSU-UA .docx.pdf" class="button" target="_blank">Descargar<i
                 class='bx bxs-download icon__downloads'></i></a>
           </td>
         </tr>
         <tr>
           <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Documento Final</td>
           <td>
-            <a href="assets/files/#" downloads="Ejemplo_Documento_Final_PT3_Matrícula" class="button"
+            <a href="assets/files/#" downloads="INFORME-MEJORA DE GESTIÓN LOGÍSTICA (SUMIDEROS Z&G)-FINAL" class="button"
               target="_blank">Descargar<i class='bx bxs-download icon__downloads'></i></a>
           </td>
         </tr>
@@ -431,7 +431,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
           <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Presentación Final
           </td>
           <td>
-            <a href="assets/files/#" download="Ejemplo_Presentación_PT3_Matrícula" class="button"
+            <a href="assets/files/#" download="PRESENTACIÓN-MEJORA DE GESTIÓN LOGÍSTICA (SUMIDEROS Z&G)-FINAL" class="button"
               target="_blank">Descargar<i class='bx bxs-download icon__downloads'></i></a>
           </td>
         </tr>
