--- a/index.html
+++ b/index.html
@@ -455,26 +455,25 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
 <footer class="footer">
     <div class="footer__container">
       <div class="footer__item">
-        <a href="https://www.uam.mx/" target="_blank">
+        <a>
           <img class="footer__image" src="assets/img/" />
         </a>
       </div>
       <div class="footer__item">
-        <a href="http://dccd.cua.uam.mx/inicio" target="_blank">
+        <a>
           <img class="footer__image" src="assets/img/" />
         </a>
       </div>
+	    
       <div class="footer__item">
-        <a href="http://dccd.cua.uam.mx/tecnologias" target="_blank">
-          <img class="footer__image" src="assets/img/tsi_horizontal" />
+        <a>
+          <img class="footer__image" src="assets/img/" />
         </a>
       </div>
       <!-- No quites esto  -->
       <hr class="footer__line" />
       <p class="info">Creada por Jesús Rios Alzamora <a
-          href="https://themes.3rdwavemedia.com/bootstrap-templates/product/coderdocs-free-bootstrap-5-documentation-template-for-software-projects/"
-          target="_blank">CV</a> y <a href=""
-          target="_blank">iPortfolio</a>.
+
       </p>
     </div>
   </footer>
