--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
         <tr>
           <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Carta Presentación</td>
           <td>
-            <a href="assets/files/#" download="Carta Nº 025-2023-RSU-UA .docx.pdf" class="button" target="_blank">Descargar<i
+            <a href="assets/files/Carta Nº 025-2023-RSU-UA .docx.pdf" download="Carta Nº 025-2023-RSU-UA .docx.pdf" class="button" target="_blank">Descargar<i
                 class='bx bxs-download icon__downloads'></i></a>
           </td>
         </tr>
