--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
         <tr>
           <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Documento Final</td>
           <td>
-            <a href="assets/files/#" downloads="INFORME-MEJORA DE GESTIÓN LOGÍSTICA (SUMIDEROS Z&G)-FINAL" class="button"
+            <a href="assets/files/INFORME-MEJORA DE GESTIÓN LOGÍSTICA (SUMIDEROS Z&G)-FINA.pdf" downloads="INFORME-MEJORA DE GESTIÓN LOGÍSTICA (SUMIDEROS Z&G)-FINAL" class="button"
               target="_blank">Descargar<i class='bx bxs-download icon__downloads'></i></a>
           </td>
         </tr>
@@ -431,7 +431,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
           <td class="table__td-left"><img class="table__icon" src="assets/img/pdf.png" />Presentación Final
           </td>
           <td>
-            <a href="assets/files/#" download="PRESENTACIÓN-MEJORA DE GESTIÓN LOGÍSTICA (SUMIDEROS Z&G)-FINAL" class="button"
+            <a href="assets/files/PRESENTACIÓN-MEJORA DE GESTIÓN LOGÍSTICA (SUMIDEROS Z&G)-FINAL.pdf" download="PRESENTACIÓN-MEJORA DE GESTIÓN LOGÍSTICA (SUMIDEROS Z&G)-FINAL" class="button"
               target="_blank">Descargar<i class='bx bxs-download icon__downloads'></i></a>
           </td>
         </tr>
