--- a/index.html
+++ b/index.html
@@ -472,9 +472,7 @@ Este enfoque integral no solo busca reducir residuos y fomentar prácticas comer
       </div>
       <!-- No quites esto  -->
       <hr class="footer__line" />
-      <p class="info">Creada por Jesús Rios Alzamora <a
-
-      </p>
+      <p class="info">Creada por Jesús Rios Alzamora</p>
     </div>
   </footer>
 
